Bug 920633 - 'Add getAllKeys() to IDBObjectStore'. r=janv.